--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ if(CMAKE_CROSSCOMPILING)
         "src/pic.c"
         "src/strings.c"
         "src/timer.c"
+        "src/keyboard.c"
         "src/boot.S"
         )
 
