Added a readline function to get a line of user input.
To support this, split the keyboard driver into an upper half and a lower
half which operate asynchronously with crude synchronization. The readline
function will wait patiently for key presses and process them on arrival.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ if(CMAKE_CROSSCOMPILING)
     # Source files for the kernel. (no organization to these files yet)
     set(KERNEL_SOURCE_FILES
         ${COMMON_SOURCE_FILES}
+        "src/readline.c"
         "src/backtrace.c"
         "src/backtrace_asm.S"
         "src/console.c"
