--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(COMMON_SOURCE_FILES
     "src/gdt.c"
     "src/idt.c"
     "src/kprintf.c"
+    "src/heap/heap_pool.c"
     )
 
 include_directories("src/include")
@@ -101,6 +102,7 @@ else()
     # Source files for the test suite.
     set(TEST_SOURCE_FILES
          ${COMMON_SOURCE_FILES}
+        "src/test/test_heap_pool.c"
         "src/test/test_gdt.c"
         "src/test/test_idt.c"
         "src/test/test_printf.c"
@@ -112,7 +114,7 @@ else()
     include_directories(${CHECK_INCLUDE_DIRS})
     link_directories(${CHECK_LIBRARIES_DIR})
     set(LIBS ${LIBS} ${CHECK_LIBRARIES})
-    set(CMAKE_C_FLAGS "-std=c11 -g -O0 -Wall -Wextra -Werror")
+    set(CMAKE_C_FLAGS "-std=c11 -g -O0 -Wall -Wextra -Werror -Wno-unused-function -DTESTING")
     add_executable(${TEST_RUNNER_NAME} ${TEST_SOURCE_FILES})
     target_link_libraries(${TEST_RUNNER_NAME} ${LIBS})
     add_test(${TEST_RUNNER_NAME} ${CMAKE_CURRENT_BINARY_DIR}/${TEST_RUNNER_NAME})
