WIP implementation of realloc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,7 +114,7 @@ else()
     include_directories(${CHECK_INCLUDE_DIRS})
     link_directories(${CHECK_LIBRARIES_DIR})
     set(LIBS ${LIBS} ${CHECK_LIBRARIES})
-    set(CMAKE_C_FLAGS "-std=c11 -g -O0 -Wall -Wextra -Werror -Wno-unused-function -DTESTING")
+    set(CMAKE_C_FLAGS "-std=c11 -g -O0 -Wall -Wextra -Werror -DTESTING")
     add_executable(${TEST_RUNNER_NAME} ${TEST_SOURCE_FILES})
     target_link_libraries(${TEST_RUNNER_NAME} ${LIBS})
     add_test(${TEST_RUNNER_NAME} ${CMAKE_CURRENT_BINARY_DIR}/${TEST_RUNNER_NAME})
