--- a/Malloc/CMakeLists.txt
+++ b/Malloc/CMakeLists.txt
@@ -10,3 +10,27 @@ set(SOURCE_FILES_MALLOC
     )
 include_directories("include")
 add_library(Malloc STATIC ${SOURCE_FILES_MALLOC})
+
+if(NOT CMAKE_CROSSCOMPILING)
+
+    enable_testing()
+
+    include_directories("include"
+                        ${CHECK_INCLUDE_DIRS}
+                        )
+
+    link_directories(${CHECK_LIBRARIES_DIR})
+
+    add_executable(MallocTest
+                   "test/test_malloc_zone.c"
+                   "test/test_main.c"
+                   )
+
+    target_link_libraries(MallocTest
+                          Malloc
+                          ${CHECK_LIBRARIES}
+                          )
+
+    add_test(MallocTest ${CMAKE_CURRENT_BINARY_DIR}/MallocTest)
+
+endif()
