Now building a kernel static library in a separate subdirectory.
This static library isn't very testable, and I should work on that.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,41 @@
 cmake_minimum_required(VERSION 3.6)
 project(FlapjackOS C)
+
+enable_language(ASM)
+
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMakeModules/")
 
-# Setup compiler flags.
+# Let's stick strictly to the C11 standard.
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_C_STANDARD_REQUIRED ON)
+set(CMAKE_C_EXTENSIONS OFF)
+
+# Setup compiler flags before building the subdirectories.
 if(CMAKE_CROSSCOMPILING)
-    set(CMAKE_C_FLAGS "-std=c11 -ffreestanding -O0 -Wall -Wextra -Werror")
+
+    # When cross-compiling, we want to build free-standing executables with no
+    # standard library as we cannot use the libc of the host system. Also, the
+    # kernel must perform some magic to boot which is never done in userspace
+    # programs.
+    #
+    # Finally, note that we choose -O0. We do this so as to avoid any kind of
+    # optimizer silliness which might break the kernel or make debugging things
+    # more difficult. In the future, I should enable -O2 and fix anything that
+    # breaks.
+    set(CMAKE_C_FLAGS "-ffreestanding -O0 -Wall -Wextra -Werror")
     set(CMAKE_C_LINK_FLAGS "-ffreestanding -O0 -nostdlib")
+
 else()
-    set(CMAKE_C_FLAGS "-std=c11 -g -O0 -Wall -Wextra -Werror -DTESTING")
+
+    # When the target system is the host system, we are building natively.
+    # In this case, define a flag to indicate we are doing testing and choose
+    # some rather standard compiler flags.
+    set(CMAKE_C_FLAGS "-g -O0 -Wall -Wextra -Werror -DTESTING")
+
+    # If we're building natively then we want to build tests.
+    enable_testing()
+    find_package(Check REQUIRED)
+
 endif()
 
 add_subdirectory("LibC")
@@ -20,112 +48,20 @@ set(MALLOC_LIBRARIES Malloc)
 set(MALLOC_LIBRARIES_DIR "${PROJECT_SOURCE_DIR}/Malloc")
 set(MALLOC_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/Malloc/include")
 
-# Setup other source files. We'll use these in targets below.
-set(CORE_INCLUDE_FILES
-    "src/include/console.h"
-    "src/include/ltr.h"
-    "src/include/seg.h"
-    "src/include/isr_install.h"
-    "src/include/halt.h"
-    "src/include/idt.h"
-    "src/include/readline.h"
-    "src/include/kprintf.h"
-    "src/include/backtrace.h"
-    "src/include/misc.h"
-    "src/include/timer.h"
-    "src/include/pic.h"
-    "src/include/keyboard.h"
-    "src/include/ctypes.h"
-    "src/include/panic.h"
-    "src/include/interrupt_asm.h"
-    "src/include/inout.h"
-    "src/include/tss.h"
-    "src/include/gdt.h"
-    "src/include/assert.h"
-    )
-source_group("Headers" FILES ${CORE_INCLUDE_FILES})
+add_subdirectory("Kernel")
+set(KERNEL_LIBRARIES Kernel)
+set(KERNEL_LIBRARIES_DIR "${PROJECT_SOURCE_DIR}/Kernel")
+set(KERNEL_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/Kernel/include")
 
-set(ISR_ERB_FILES
-    "src/isr_install.c.erb"
-    "src/isr_wrapper_asm.S.erb"
-    )
-source_group("ISR Template Files" FILES ${ISR_ERB_FILES})
-
-set(KEYBOARD_INC_FILES
-    "src/keyboard/keyboard_scancodes_make_escaped.inc"
-    "src/keyboard/keyboard_scancodes_break.inc"
-    "src/keyboard/keyboard_keycode_ascii_uppercase.inc"
-    "src/keyboard/keyboard_keycode_names.inc"
-    "src/keyboard/keyboard_keycode_ascii_lowercase.inc"
-    "src/keyboard/keyboard_scancodes_break_escaped.inc"
-    "src/keyboard/keyboard_scancodes_make.inc"
-    )
-source_group("Keyboard Inc" FILES ${KEYBOARD_INC_FILES})
-
-set(COMMON_SOURCE_FILES
-    "src/gdt.c"
-    "src/idt.c"
-    "src/kprintf.c"
-    )
-source_group("Common" FILES ${COMMON_SOURCE_FILES})
-
-# Source files for the kernel.
-set(KERNEL_SOURCE_FILES
-    "src/readline.c"
-    "src/backtrace.c"
-    "src/backtrace_asm.S"
-    "src/console.c"
-    "src/gdt_asm.S"
-    "src/halt.S"
-    "src/idt_asm.S"
-    "src/inout.S"
-    "src/interrupt_asm.S"
-    "src/isr_install.c"
-    "src/isr_wrapper_asm.S"
-    "src/kernel.c"
-    "src/ltr.S"
-    "src/panic.c"
-    "src/pic.c"
-    "src/timer.c"
-    "src/keyboard/keyboard.c"
-    "src/boot.S"
-    )
-source_group("Kernel" FILES ${KERNEL_SOURCE_FILES})
-
-# Source files for the test suite.
-set(TEST_SOURCE_FILES
-    "src/test/test_gdt.c"
-    "src/test/test_idt.c"
-    "src/test/test_printf.c"
-    "src/test/test_main.c"
-    )
-source_group("Test" FILES ${TEST_SOURCE_FILES})
-
-# Setup a build for either the kernel or the test suite.
-# We can't setup both because (as far as I know) we can only have one toolchain
-# for the entire CMake project.
+# If we're cross-compiling to the target architecture then build a bootable ISO.
+# We cannot do this when building natively because (as far as I know) there's no
+# way to use two toolchains simultaneously in CMake.
 if(CMAKE_CROSSCOMPILING)
 
-    set(ALL_SOURCE_FILES
-        ${CORE_INCLUDE_FILES}
-        ${ISR_ERB_FILES}
-        ${KEYBOARD_INC_FILES}
-        ${COMMON_SOURCE_FILES}
-        ${KERNEL_SOURCE_FILES}
-        )
+    include_directories(${KERNEL_INCLUDE_DIRS})
+    link_directories(${KERNEL_LIBRARIES_DIRS})
 
-    enable_language(ASM)
-
-    include_directories("src/include"
-                        ${LIBC_INCLUDE_DIRS}
-                        ${MALLOC_INCLUDE_DIRS}
-                        )
-
-    link_directories(${LIBC_LIBRARIES_DIR}
-                     ${MALLOC_LIBRARIES_DIRS}
-                     )
-
-    # The layout file specifies how the linker puts together the kernel binary image.
+    # The layout file specifies how the linker puts together the binary image.
     set(KERNEL_LAYOUT_FILE "kernel.ld")
 
     # Force a dependency between boot.S and the linker layout so that a build is
@@ -138,10 +74,9 @@ if(CMAKE_CROSSCOMPILING)
     # can actually be directly booted by Qemu.
     set(KERNEL_BIN "kernel.bin")
     set(KERNEL_LINK_FLAGS "-m32 -march=i386 -T ${KERNEL_LAYOUT_FILE}")
-    add_executable(${KERNEL_BIN} ${ALL_SOURCE_FILES})
+    add_executable(${KERNEL_BIN} boot.S)
     target_link_libraries(${KERNEL_BIN}
-                          ${LIBC_LIBRARIES}
-                          ${MALLOC_LIBRARIES}
+                          ${KERNEL_LIBRARIES}
                           )
     set_target_properties(
         ${KERNEL_BIN} PROPERTIES
@@ -155,7 +90,7 @@ if(CMAKE_CROSSCOMPILING)
     # ISO will be rebuilt correctly after modifying the kernel binary, the Grub
     # configuration file, or the ISO build script itself.
     set(GRUB_CFG "grub.cfg")
-    set(BUILD_ISO_TOOL "scripts/build_iso.sh")
+    set(BUILD_ISO_TOOL "${CMAKE_SOURCE_DIR}/scripts/build_iso.sh")
     add_custom_command(
         OUTPUT ${CMAKE_PROJECT_NAME}.iso
         COMMAND ${BUILD_ISO_TOOL} ${KERNEL_BIN} ${GRUB_CFG} ${CMAKE_BINARY_DIR}/${CMAKE_PROJECT_NAME}.iso
@@ -165,49 +100,7 @@ if(CMAKE_CROSSCOMPILING)
     )
     add_custom_target(
         iso ALL
-        DEPENDS ${CMAKE_PROJECT_NAME}.iso
+        DEPENDS ${CMAKE_BINARY_DIR}/${CMAKE_PROJECT_NAME}.iso
     )
 
-    set(ERB_TOOL "scripts/erb.sh")
-    add_custom_command(
-        OUTPUT src/isr_install.c
-        COMMAND ${ERB_TOOL} src/isr_install.c.erb src/isr_install.c
-        DEPENDS ${ERB_TOOL} src/isr_install.c.erb
-        VERBATIM
-    )
-    add_custom_command(
-        OUTPUT src/isr_wrapper_asm.S
-        COMMAND ${ERB_TOOL} src/isr_wrapper_asm.S.erb src/isr_wrapper_asm.S
-        DEPENDS ${ERB_TOOL} src/isr_wrapper_asm.S.erb
-        VERBATIM
-    )
-
-else()
-
-    enable_testing()
-    find_package(Check REQUIRED)
-
-    set(TEST_RUNNER_NAME "${CMAKE_PROJECT_NAME}_Test")
-
-    include_directories("src/include"
-                        ${MALLOC_INCLUDE_DIRS}
-                        ${CHECK_INCLUDE_DIRS}
-                        )
-
-    link_directories(${MALLOC_LIBRARIES_DIRS}
-                     ${CHECK_LIBRARIES_DIR}
-                     )
-
-    add_executable(${TEST_RUNNER_NAME}
-                   ${COMMON_SOURCE_FILES}
-                   ${TEST_SOURCE_FILES}
-                   )
-
-    target_link_libraries(${TEST_RUNNER_NAME}
-                          ${MALLOC_LIBRARIES}
-                          ${CHECK_LIBRARIES}
-                          )
-
-    add_test(${TEST_RUNNER_NAME} ${CMAKE_CURRENT_BINARY_DIR}/${TEST_RUNNER_NAME})
-
-endif()
+endif(CMAKE_CROSSCOMPILING)
