--- a/gitignore.template
+++ b/gitignore.template
@@ -1,21 +1,31 @@
 syntax:glob
-.DS_Store
 .gitignore
-*.o
-kernel.bin
-FlapjackOS.iso
-FlapjackOS_Test
-bochsrc
-isodir/
-parport.out
-bochsout.txt
-debugger.out
 CMakeCache.txt
 CMakeFiles/
-cmake_install.cmake
+FlapjackOS.iso
+Kernel/CMakeFiles/
+Kernel/Makefile
+Kernel/cmake_install.cmake
+Kernel/libKernel.a
+Kernel/CTestTestfile.cmake
+Kernel/KernelTest
+LibC/CMakeFiles/
+LibC/Makefile
+LibC/cmake_install.cmake
+LibC/libLibC.a
+LibC/CTestTestfile.cmake
+LibC/LibCTest
 Makefile
-.idea/
-FlapjackOS.cbp
-CMakeScripts/
+Malloc/CMakeFiles/
+Malloc/Makefile
+Malloc/cmake_install.cmake
+Malloc/libMalloc.a
+Malloc/CTestTestfile.cmake
+Malloc/MallocTest
+bochsout.txt
+bochsrc
+cmake_install.cmake
+debugger.out
+kernel.bin
+parport.out
 CTestTestfile.cmake
-Testing/
